--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,9 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
-        server: ${{ secrets.FTP-SERVER }}
-        username: ${{ secrets.FTP-USER }}
-        password: ${{ secrets.FTP-PASSWORD }}
+        server: ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USER }}
+        password: ${{ secrets.FTP_PASSWORD }}
         protocol: ftps
-        port: ${{ secrets.FTP-PORT }}
+        port: ${{ secrets.FTP_PORT }}
         exclude: git*
